--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="row">
-    <h1>Welcome to our dashboard</h1>
-  </div>
+  <!-- add the menubar in dashboard -->
+  {% include 'partials/_menubar.html' %}
+    <!-- Main content along with dashboard-->
+    <div id="page-wrapper">
+      <h1>Hello world</h1>
+    </div>
 {% endblock content %}
